api add config and ui endpoints
